Add candidate update api:
