# be/app/Http/Controllers/API/Candidates/CandidatesAPIController.php
@@ -272,28 +272,31 @@ class CandidatesAPIController extends AppBaseController
      *            mediaType="multipart/form-data",
      *            @OA\Schema(
      *               type="object",
-     *                required={"email","password","first_name","last_name","confirm_password","phone_no","is_agree_term","is_agree_privacy"},
+     *                required={"email","address","regulatory_college","regulatory_college_no","experience","password","first_name","last_name","confirm_password","phone_no","is_agree_term","is_agree_privacy"},
      *                @OA\Property(property="first_name", type="string", example="test"),
-     *                 @OA\Property(property="last_name", type="string", example="kumar"),
+     *                @OA\Property(property="last_name", type="string", example="kumar"),
+     *                @OA\Property(property="address", type="string", example="mohali"),
      *                @OA\Property(property="password", type="string", format="password", example="PassWord12345"),
      *                @OA\Property(property="confirm_password", type="string", format="password", example="PassWord12345"),
      *                @OA\Property(property="email", type="string", format="email", example="user1@mail.com"),
      *                @OA\Property(property="phone_no", type="string", example="378378373"),
+     *                @OA\Property(property="regulatory_college", type="string", example="test"),
+     *                @OA\Property(property="regulatory_college_no", type="string", example="kumar"),
+     *                @OA\Property(property="experience", type="string", example="mohali"),
+     *                @OA\Property(property="is_travel_allowance", type="checbox", format="checbox", example="0|1"),
+     *                @OA\Property(property="is_meal_allowance", type="checbox", format="checbox", example="0|1"),
+     *                @OA\Property(property="is_accommodation_allowance", type="checbox", format="checbox", example="0|1"),
+     *                @OA\Property(property="travel_allowance_amount", type="string", format="", example="120"),
+     *                @OA\Property(property="meal_allowance_amount", type="string", format="", example="130"),
+     *                @OA\Property(property="accommodation_allowance_amount", type="string", format="", example="120"),
+     *                @OA\Property(property="rate_type", type="integer", example="1" ,description="Daily=>1,Hourly=>2"),
+     *                @OA\Property(property="rate_amount", type="string", example="12" ,description="Enter the price on the bais of rate type"),
+     *                @OA\Property(property="notes", type="string", example="About yourself"),
+     *                @OA\Property(description="file to upload",property="resume",type="file"),
      *                @OA\Property(property="is_agree_term", type="checbox", format="checbox", example="0|1"),
      *                @OA\Property(property="is_agree_privacy", type="checbox", format="checbox", example="0|1"),
      *               )
      *        ),
-     *        @OA\JsonContent(
-     *                required={"email","password","first_name","last_name","confirm_password","phone_no","is_agree_term","is_agree_privacy"},
-     *                @OA\Property(property="first_name", type="string", example="test"),
-     *                 @OA\Property(property="last_name", type="string", example="kumar"),
-     *                @OA\Property(property="password", type="string", format="password", example="PassWord12345"),
-     *                @OA\Property(property="confirm_password", type="string", format="password", example="PassWord12345"),
-     *                @OA\Property(property="email", type="string", format="email", example="user1@mail.com"),
-     *                @OA\Property(property="phone_no", type="string", example="378378373"),
-     *                @OA\Property(property="is_agree_term", type="checbox", format="checbox", example="0|1"),
-     *                @OA\Property(property="is_agree_privacy", type="checbox", format="checbox", example="0|1"),
-     *         ),
      *      ),
      *      @OA\Response(
      *          response=200,
